fix: Updated LLM example and tempaltes to include sources + Hide buttons while loading

--- a/AgrIA_server/assets/LLM_assets/prompts/examples/26002A001000010000EQ_example_es.md
+++ b/AgrIA_server/assets/LLM_assets/prompts/examples/26002A001000010000EQ_example_es.md
@@ -18,6 +18,8 @@ La imagen muestra una combinación de usos del suelo. Destacan **Pastos Mediterr
 
 </center>
 
+*Fuente: Importes Unitarios Provisionales Campaña PAC 2025*
+
 ---
 
 **PAGO TOTAL ESTIMADO (Península):**
@@ -34,6 +36,7 @@ La imagen muestra una combinación de usos del suelo. Destacan **Pastos Mediterr
 
 </center>
 
+*Fuente: Pagos calculados en base al Importe Estimado (Península)*
 ---
 
 **RESULTADOS:**
