Style: Update MD report example + Cleanup code

--- a/AgrIA_server/assets/LLM_assets/context/files/26002A001000010000EQ_example_es.md
+++ b/AgrIA_server/assets/LLM_assets/context/files/26002A001000010000EQ_example_es.md
@@ -1,44 +1,50 @@
-**DESCRIPCIÓN:**
+🗺️ **DESCRIPCIÓN:**
 
 La imagen muestra una combinación de usos del suelo. Destacan **Pastos Mediterráneos (PS, PR, PA)** y **Tierras Arables (TA)**, con la presencia de **Viñedos (VI)** y **superficies bajo agua (AG)**. También se observan **Improductivos (IM)**, **Viales (CA)**, **Edificaciones (ED)** y **Forestal (FO)**.
 
 ---
 
-**POSIBLES ECO-REGÍMENES:**
+🏞️ **POSIBLES ECO-REGÍMENES:**
 
-| **Ecorregimen**       | **Viabilidad** | **Importe Estimado (Península)*** | **Importe Estimado (Insular)*** | **Condiciones**                                                                                                                                                                                                                                                                                                                                                                                                                       |
-| :-------------------- | :------------- | :--------------------------------- | :--------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **P1 - Pastoreo y Biodiversidad (Pastos Mediterráneos)** | Alta           | 27.27 €/ha                          | 49.27 €/ha                          | Mantener una carga ganadera adecuada, y respetar un periodo de no pastoreo o siega en al menos el 50% del área.                                                                                                                                                                                                                                                                                                             |
-| **P3/P4 - Rotación y Siembra Directa (Regadío)**      | Alta           | 141.74 €/ha                         | 221.74 €/ha                         | Rotar el 50% del área de cultivo anualmente o el 10% con especies mejorantes (5% leguminosas) O dejar sin labrar el 40%. (**Tramo 2** aplicado: Área > 25 ha)                                                                                                                                                                                                                                                               |
-| **P5 (B) - Espacios de Biodiversidad (Bajo Agua)**     | Posible        | 145.10 €/ha                         | N/A                               | Aplicable a áreas cultivadas bajo agua (e.g., arrozales). (Tarifa Plana)                                                                                                                                                                                                                                                                                                                                                        |
-| **P6/P7 - Cubiertas Vegetales o Espontáneas (Terreno Llano)**      | Posible        | 59.12 €/ha                          | 99.12 €/ha                          | Cubierta viva o restos de poda distribuidos. (**Tramo 2** aplicado: Área > 15 ha)                                                                                                                                                                                                                                                                                                                                                    |
-| **No Elegible**       | Posible        | N/A                                 | N/A                                 | Esta categoría está reservada para terrenos no agrícolas.                                                                                                                                                                                                                                                                                                                                                                  |
+| **Ecorregimen**                                               | **Viabilidad**                        | **Importe Estimado (Península)*** |  **Importe Estimado (Insular)***   | **Condiciones**                                                                                                                                                                                                                                                                                                                                                                                                                    |
+| :------------------------------------------------------------ | :------------------------------------ | :-------------------------------- | :--------------------------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **P1 - Pastoreo y Biodiversidad (Pastos Mediterráneos)**      | ✅ Alta                               | 27.27 €/ha       | 49.27 €/ha                         | Mantener una carga ganadera adecuada, y respetar un periodo de no pastoreo o siega en al menos el 50% del área.                                                                                                                                                                                                                                                                                                                    |
+| **P3/P4 - Rotación y Siembra Directa (Regadío)**              | ✅ Alta                               | 141.74 €/ha      | 221.74 €/ha                        | Rotar el 50% del área de cultivo anualmente o el 10% con especies mejorantes (5% leguminosas) O dejar sin labrar el 40%. (**Tramo 2** aplicado: Área > 25 ha)                                                                                                                                                                                                                                                                      |
+| **P5 (B) - Espacios de Biodiversidad (Bajo Agua)**            | ✅ Posible                            | 145.10 €/ha      | N/A                                | Aplicable a áreas cultivadas bajo agua (e.g., arrozales). (Tarifa Plana)                                                                                                                                                                                                                                                                                                                                                           |
+| **P6/P7 - Cubiertas Vegetales o Espontáneas (Terreno Llano)** | ✅ Posible                            | 59.12 €/ha       | 99.12 €/ha                         | Cubierta viva o restos de poda distribuidos. (**Tramo 2** aplicado: Área > 15 ha)                                                                                                                                                                                                                                                                                                                                                  |
+| **No Elegible**                                               | ❌ Posible                            | N/A              | N/A                                | Esta categoría está reservada para terrenos no agrícolas.                                                                                                                                                                                                                                                                                                                                                                          |
+
+_*Fuente: [Importes Unitarios Provisionales Campaña PAC 2025](https://www.fega.gob.es/sites/default/files/files/document/250925_NOTA_WEB_Ecorregimenes_Ca_2025_ANTICIPO_v02.pdf)_
 
 ---
 
-**PAGO TOTAL ESTIMADO (Península):**
+💰 **PAGO TOTAL ESTIMADO:**
 
-| **Ecorregimen**                             | **Clase de Uso de la Tierra Elegible**   | **Área Total (ha)** | **Pago Base (€)*** | **Total con Plurianualidad (€)*** | **Aplicable**                                                                                                                                                                                                 |
-| :------------------------------------------ | :--------------------------------------- | :----------------- | :------------------ | :--------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| **P1 - Pastoreo y Biodiversidad**           | MT, PA, PR, PS                         | 7.0703             | 192.81              | 192.81                             | Sí (Tier 1 Applied)                                                                                                                                                                                          |
-| **P3/P4 - Rotación y Siembra Directa**      | TA                                       | 22.7474            | 3224.27             | 3792.95                            | Sí (Tier 1 Applied)                                                                                                                                                                                          |
-| **P5 (B) - Espacios de Biodiversidad**      | AG                                       | 0.4099             | 59.48               | 59.48                              | Sí (Flat Rate)                                                                                                                                                                                               |
+| **Ecorregimen**                               |        **Uso de Tierra Elegible**        | **Área Total (ha)** | **Pago Base (€)*** | **Total con Plurianualidad (€)*** | **Aplicable**                                                                                                                                                                                                 |
+| :-------------------------------------------- | :--------------------------------------- | :----------------- | :------------------ | :--------------------------------- | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **P1 - Pastoreo y Biodiversidad**             | MT, PA, PR, PS                           | 7.0703             | 192.81              | 192.81                             | Sí (Tier 1 Applied)                                                                                                                                                                                          |
+| **P3/P4 - Rotación y Siembra Directa**        | TA                                       | 22.7474            | 3224.27             | 3792.95                            | Sí (Tier 1 Applied)                                                                                                                                                                                          |
+| **P5 (B) - Espacios de Biodiversidad**        | AG                                       | 0.4099             | 59.48               | 59.48                              | Sí (Flat Rate)                                                                                                                                                                                               |
 | **P6/P7 - Cubiertas Vegetales o Espontáneas** | FY, VI                                   | 9.4863             | 560.83              | 797.98                             | Sí (Tier 1 Applied)                                                                                                                                                                                          |
-| **N/A - Non-Eligible**                     | CA, ED, FO, IM, ZU                       | 6.0193             | N/A                 | N/A                                | N/A                                                                                                                                                                                                          |
+| **N/A - Non-Eligible**                        | CA, ED, FO, IM, ZU                       | 6.0193             | N/A                 | N/A                                | N/A                                                                                                                                                                                                          |
+
+_*Fuente: Pagos calculados en base al Importe Estimado (Península)_
 
 ---
 
-**RESULTADOS:**
+📊 **RESULTADOS:**
 
 <center>
 
-| Ecorregímenes Válidos                          | Importe Total (sin Plur.) | Importe Total (con Plur.) |
+|               Ecorregímenes Válidos             | Importe Total (sin Plur.) | Importe Total (con Plur.) |
 | :---------------------------------------------: | :-----------------------: | :-----------------------: |
-| **P1 + P3/P4 + P5 (B) + P6/P7** |        **4037.39 €**        |        **4885.52 €**        |
+|           **P1 + P3/P4 + P5 (B) + P6/P7**       |      **4037.39 €**        |      **4885.52 €**        |
 
 </center>
 
--   **Aclaraciones:**
-    *   P3/P4 (TA) fue calculado usando el importe de Regadío. El Tramo 1 se aplicó a las 22.75 ha, puesto que no exceden el límite de 25 ha (T1: 141.74 €/ha, T2: 99.22 €/ha).
-    *   P6/P7 (CI, OV) se calculó con el importe de Terreno Llano (59.12 €/ha), debido al bajo procentaje de inclinación (<35%).
-    *   El total de bonus por plurianualidad (848.13 EUR) se aplicaría a las 32.23 ha de terreno elegible (TA + FY + VI).
+---
+
+📝 **ACLARACIONES:**
+* P3/P4 (TA) fue calculado usando el importe de Regadío. El Tramo 1 se aplicó a las 22.75 ha, puesto que no exceden el límite de 25 ha (T1: 141.74 €/ha, T2: 99.22 €/ha).
+* P6/P7 (CI, OV) se calculó con el importe de Terreno Llano (59.12 €/ha), debido al bajo procentaje de inclinación (<35%).
+* El total de bonus por plurianualidad (848.13 EUR) se aplicaría a las 32.23 ha de terreno elegible (TA + FY + VI).
