Chore: Added visual info to parcel desc + Lang correction

--- a/AgrIA_server/assets/LLM_assets/context/files/26002A001000010000EQ_example_es.md
+++ b/AgrIA_server/assets/LLM_assets/context/files/26002A001000010000EQ_example_es.md
@@ -1,6 +1,6 @@
 🗺️ **DESCRIPCIÓN:**
 
-La imagen muestra una combinación de usos del suelo. Destacan **Pastos Mediterráneos (PS, PR, PA)** y **Tierras Arables (TA)**, con la presencia de **Viñedos (VI)** y **superficies bajo agua (AG)**. También se observan **Improductivos (IM)**, **Viales (CA)**, **Edificaciones (ED)** y **Forestal (FO)**.
+La imagen muestra una parcela de forma irregular, con áreas divididas en campos de cultivo que presentan **tonos variables de verde y marrón**, con **texturas diferenciadas** que sugieren distintos tipos de cultivos o estados de desarrollo, junto con posibles **caminos de un color más claro y zonas de vegetación con un tono más oscuro**, todo visto desde una perspectiva aérea. Destacan **Pastos Mediterráneos (PS, PR, PA)** y **Tierras Arables (TA)**, con la presencia de **Viñedos (VI)** y **superficies bajo agua (AG)**. También se observan **Improductivos (IM)**, **Viales (CA)**, **Edificaciones (ED)** y **Forestal (FO)**.
 
 ---
 
