--- a/AgrIA_UI/public/i18n/es.json
+++ b/AgrIA_UI/public/i18n/es.json
@@ -80,7 +80,7 @@
     "transparencyNotice": {
       "sectionTitle": "Aviso de transparencia y fuentes de AgrIA",
       "introParagraph": "Este aviso se emite en cumplimiento con los principios de Transparencia y Responsabilidad establecidos en la ",
-      "euAiAct": "Ley de Inteligencia Artificial de la Unión Europea (AI Act):",
+      "euAiAct": "Ley de Inteligencia Artificial de la Unión Europea (Reglamento-UE-2024/1689 / AI Act):",
       "heading1": "Identificación y Naturaleza del Sistema:",
       "item1_1_title": "Identificación:",
       "item1_1_text": "El Módulo Asistente de Chat AgrIA es una modificación ajustada del modelo multimodal Gemini de Google.",
